2008-09-25  Carlos Alberto Cortez <calberto.cortez@gmail.com> 

	* FileDialog.cs: Implement basic support for sorting by columns in
	Details view. Patch by Eric Petit.
	Fixes #428006.

2008-09-25  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ThemeWin32Classis.cs: When drawing gridlines take into account the
	case where ListView.ItemSize hasn't been computed, and provide a
	fallback as well. This prevents a division by 0.

2008-09-24  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeVisualStyles.cs: Use ClientRectangle instead of Bounds to
	correctly draw tooltip backgrounds.

2008-09-24  Jonathan Pobst  <monkey@jpobst.com>

	* ImageList.cs: Change CopyTo implementation to ensure clones are
	created of our images.
	[Fixes bug #409169]

2008-09-24  Jonathan Pobst  <monkey@jpobst.com>

	* Control.cs: When setting fonts, we need to ensure we change our
	reference to the new font object, even if it represents the same
	font as before.  If we don't, the original font can get disposed
	and we will still try to use it.
	[Fixes bug #386450]

2008-09-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* FileDialog.cs: Take into account Tile view when selecting the view
	(2.0 profile).

2008-09-24  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* ThemeWin32Classic.cs: When drawing gridlines for ListView don't use
	the item bounds, since we can't iterate over them in virtual mode.
	Also fix wrong calculation of the gridlines when using scrolling.
	Fixes #400390.

2008-09-23  Carlos Alberto Cortez <calberto.cortez@gmail.com>

	* XplatUIX11.cs: When handling EnterNotify events, take into account
	both the public and implicit controls when trying to detect the
	grab/ungrab process. This should fix ListView selection in Details
	view.

2008-09-23  Jonathan Pobst  <monkey@jpobst.com>

	* TreeView.cs: Redraw the whole node area when the selected node changes.
	Things like state images were not getting redrawn because the invalid
	rectangle was too small.