@@ -1,3 +1,9 @@
+2008-09-27  Jonathan Pobst  <monkey@jpobst.com>
+
+	* ThemeWin32Classic.cs: When drawing a status bar panel, don't
+	return early if the text is empty because the icon doesn't get
+	drawn then.  [Fixes bug #428113]
+
 2008-09-25  Carlos Alberto Cortez <calberto.cortez@gmail.com> 
 
 	* FileDialog.cs: Implement basic support for sorting by columns in
